Fix alignment and sizing

--- a/app/assets/stylesheets/characters.scss
+++ b/app/assets/stylesheets/characters.scss
@@ -38,19 +38,17 @@
 .character-no-icon {
   display: inline-block;
   border: 1px $border_color_character_iconless solid;
-  width: 102px;
-  height: 102px;
-  padding: 20px 5px;
+  width: 100px;
+  height: 100px;
+  line-height: 100px;
+  padding: 0px 5px;
   text-align: center;
+  vertical-align: middle;
 
   color: $font_color_page;
+
   font-size: 90%;
   font-style: italic;
-
-  &.icon {
-    max-width: 102px;
-    max-height: 102px;
-  }
 }
 
 // character list view
